--- a/visualise_simulation.ipynb
+++ b/visualise_simulation.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "To visualise a simulation as graph and animation:\n",
     "\n",
-    "1. **Run a simulation (execute the \"run_simulation\" function in the simulation.py) with parameters of interest and the parameter \"visualise\" set to True.** The results will be saved as \"states_simulation\" in the \"results\" directory. Each run overwrites the previous one. \n",
+    "1. **Run a simulation (execute the \"run_simulation\" function in the simulations_functions.py) with parameters of interest and the parameter \"visualise\" set to True.** The results will be saved as \"states_simulation\" in the \"results\" directory. Each run overwrites the previous one. \n",
     "\n",
     "2. **Run all code in this Jupyter notebook.** The data from \"states_simulation\" will load and provide a visual representation of the simulation."
    ]
